--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,7 @@ $font-primary: 'Poppins',Arial, sans-serif;
 $white: #fff;
 $black: #000000;
 
-$primary: #1089ff;
+$primary: #d77723;
 $secondary: #01d28e;
 
 
