adjusted the navbar color

--- a/css/style.css
+++ b/css/style.css
@@ -10017,7 +10017,7 @@ textarea.form-control {
 }
 #ftco-navbar .navbar-nav .nav-link:hover,
 #ftco-navbar .navbar-nav .nav-link:focus {
-  color: #0fbf8b !important; /* keep accent hover color */
+  color: #d77723 !important; /* keep accent hover color */
 }
 #ftco-navbar .navbar-brand .brand-text,
 #ftco-navbar .navbar-brand .brand-text span {
