--- a/css/style.css
+++ b/css/style.css
@@ -5546,6 +5546,7 @@ button.bg-dark:focus {
   display: table-cell !important; }
 
 .d-flex {
+  color: black;
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important; }
@@ -8768,8 +8769,9 @@ h1, h2, h3, h4, h5,
 .pills {
   margin-top: 40px; }
   .pills .tab-pane {
+    color: #000000 !important;
     padding: 2em;
-    border-top: 1px solid rgba(0, 0, 0, 0.1); }
+    border-top: 1px solid rgba(0, 0, 0, 0); }
   .pills .features {
     margin: 0;
     padding: 0; }
@@ -8819,7 +8821,7 @@ h1, h2, h3, h4, h5,
           color: #01d28e; }
         .pills .review .desc .star .reply {
           padding: 2px 10px;
-          background: #f0f0f0;
+          color: #000;
           -webkit-border-radius: 2px;
           -moz-border-radius: 2px;
           -ms-border-radius: 2px;
